# realm-kotlin

./: .directory  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DEPRECATED-Jenkinsfile  DYNAMIC-REALMS-API.md  Dockerfile.android  ERRORS.md  GHA_README.md  Jenkinsfile  LICENSE  README.md  REALM-MIGRATION-API.md  benchmarks-v1.json  build.gradle.kts  dependencies old.list  dependencies.list  gradlew  ongoing.txt  settings.gradle  settings.gradle.kts  widgets.qss
.githooks/: pre-commit  pre-push
app/: build.gradle
benchmarks/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
buildSrc/: build.gradle.kts  gradle.properties  settings.gradle.kts
compiler-example/: build.gradle  build.gradle.kts  settings.gradle.kts
compiler-plugin/: build.gradle.kts
config/: build.gradle.kts
example/: README.md  build.gradle  gradle.properties  settings.gradle
gradle-plugin-test/: build.gradle.kts  settings.gradle.kts
integration-tests/: README.md
lib/: README.md  build.gradle  build.gradle.kts  settings.gradle
lib/cpp_engine/: CMakeLists.txt  README.md  database.cpp  wrapper.cpp  wrapper.h
lib/cpp_engine/build-android/: CMakeLists.txt
lib/cpp_engine/build-ios/: CMakeLists.txt
lib/cpp_engine/jni/: io_realm_CInterop.h
realm/: settings.gradle.kts
realm-compiler-plugin/: build.gradle.kts  settings.gradle.kts
test/: build.gradle  build.gradle.kts  build.gradle.kts2  gradle.properties  settings.gradle.kts
tools/: collect_metrics.sh  delete-cloud-qa-apps.sh  fix-h1s.sh  gpg_with_pinentry.sh  pom.xml  publish_release.sh  (+2 more)
(+799 files in other folders)
